tests/cases/compiler/binaryArithmatic1.ts
1 + false
//~^ ERROR: Operator '+' cannot be applied to types 'number' and 'false'